--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.18",
     "gridsome": "^0.7.11",
-    "node-sass": "^4.11.0",
     "npm": "^6.9.0",
     "sass-loader": "^7.1.0",
     "vue-scrollto": "^2.15.0"
@@ -23,6 +22,7 @@
   "devDependencies": {
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.0",
-    "gridsome-plugin-tailwindcss": "^3.0.1"
+    "gridsome-plugin-tailwindcss": "^3.0.1",
+    "node-sass": "^4.14.1"
   }
 }
